--- a/FitnessTracker/src/main/resources/templates/users.html
+++ b/FitnessTracker/src/main/resources/templates/users.html
@@ -24,7 +24,7 @@
             </tbody>
         </table>
     </div>
-    <p><a href="/signup">Add a new user</a></p>
+    <p><a href="/signup.html">Add a new user</a></p>
 </div>
 </body>
 </html>
