--- a/FitnessTracker/src/main/resources/templates/Velkominn.html
+++ b/FitnessTracker/src/main/resources/templates/Velkominn.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="https://thymeleaf.org">
 <head>
+    <!--FONT-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <!--STLES-->
+    <link rel="stylesheet" href="styles.css">
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Fitness Tracker</title>
 </head>
 <body>
-<div th:switch="${exercises}">
-    <h2 th:case="null">No exercises yet!</h2>
-    <div th:case="*">
-        <h2>Exercises</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>duration</th>
-                <th>Delete</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="exercise : ${exercises}">
-                <td th:text="${exercise.title}"></td>
-                <td th:text="${exercise.description}"></td>
-                <td th:text="${exercise.duration}"></td>
-                <td><a th:href="@{/delete/{id}(id=${exercise.id})}">Delete</a></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <p><a href="/addexercise">Add a new exercise</a></p>
+<div class="home-screen">
+    <ul class="navbar">
+        <li class="nav-item"><a href="login">Log in</a></li>
+    </ul>
 
-    <p><a href="/login">Click here to register/login</a></p>
-    <p><a href="/stats">Click here to see exercise statistics</a></p>
+    <div class="hero">
+        <h1 class="hero-title">Fitness Tracker</h1>
+        <p class="hero-subtitle">If you don't track your workout and post it online, did you really even exercise, my dude?</p>
+        <a class="signup btn" href="signup">Sign up</a>
+    </div>
+</div>
+
 
 </div>
 </body>
